# lfPlayer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
scripts/: lfExport.py  projectionCompressor.py
src/: analyzer.cpp  analyzer.h  camera.cpp  camera.cxx  camera.h  encoder.cpp  encoder.h  encoderApp.cpp  gpu.cpp  gpu.h  gpuVulkan.cpp  gpuVulkan.h  inputs.cpp  inputs.cxx  inputs.h  lfEncoderApp.cpp  lfPlayerApp.cpp  main.cpp  muxing.cpp  muxing.h  resources.cpp  resources.h  simulation.cpp  simulation.h  window.h  windowGlfw.cpp  windowGlfw.h
src/shader/: bindingsHeader.glsl  computeFocusMap.comp  computeHeader.glsl  computeLightfield.comp  computeRange.comp  fragment.frag  generalHeader.glsl  vertex.vert  welfordHeader.glsl
